hphp/hack/test/typecheck/instanceof/instanceof_generic_bad2.php.exp
File "instanceof_generic_bad2.php", line 5, characters 26-26:
Generics can only be used in type hints since they are erased at runtime. (Typing[4124])
